--- a/index.html
+++ b/index.html
@@ -17,13 +17,48 @@
 	<div class="quote">
 		<p>"The Quiz About Nothing"</p>
 	</div>
-	<section class="quiz-content">
-		<div class="questions"></div>
-		<div class="answer-1"></div>
-		<div class="answer-2"></div>
-		<div class="answer-3"></div>
-		<div class="answer-4"></div>
-		<div class="submit"></div>
+	<section class="question-answer-1">
+		<div class="question-1">
+			<h2><strong>Question #1</strong></h2>
+			<p>What is the name of the gang's coffee shop hangout?</p>
+		</div>
+		<div class="answer-1"><input type="radio" name="answer">Mendy's</div>
+		<div class="answer-2"><input type="radio" name="answer">Reggie's</div>
+		<div class="answer-3"><input type="radio" name="answer">Monk's</div>
+		<div class="answer-4"><input type="radio" name="answer">Dream Cafe</div>
+		<div class="question-1">
+			<h2><strong>Question #2</strong></h2>
+			<p>What is Kramer's real name?</p>
+		</div>
+		<div class="answer-1"><input type="radio" name="answer">Carl</div>
+		<div class="answer-2"><input type="radio" name="answer">Cosmo</div>
+		<div class="answer-3"><input type="radio" name="answer">John</div>
+		<div class="answer-4"><input type="radio" name="answer">Jerry</div>
+		<div class="question-1">
+			<h2><strong>Question #3</strong></h2>
+			<p>What is Jerry's apartment number?</p>
+		</div>
+		<div class="answer-1"><input type="radio" name="answer">5A</div>
+		<div class="answer-2"><input type="radio" name="answer">5B</div>
+		<div class="answer-3"><input type="radio" name="answer">5C</div>
+		<div class="answer-4"><input type="radio" name="answer">5D</div>
+		<div class="question-1">
+			<h2><strong>Question #4</strong></h2>
+			<p>What occupation does George like to pretend he has?</p>
+		</div>
+		<div class="answer-1"><input type="radio" name="answer">Marine Biologist</div>
+		<div class="answer-2"><input type="radio" name="answer">Architect</div>
+		<div class="answer-3"><input type="radio" name="answer">Latex Salesman</div>
+		<div class="answer-4"><input type="radio" name="answer">Hand Model</div>
+		<div class="question-1">
+			<h2><strong>Question #5</strong></h2>
+			<p>What was Kramer's fake doctor name?</p>
+		</div>
+		<div class="answer-1"><input type="radio" name="answer">Dr. Van Nostrand</div>
+		<div class="answer-2"><input type="radio" name="answer">Dr. Vandelay</div>
+		<div class="answer-3"><input type="radio" name="answer">Dr. Whatley</div>
+		<div class="answer-4"><input type="radio" name="answer">Dr. Reston</div>
 	</section>
+	<div class="submit"></div>
 </body>
 </html>
