--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<div class="answer-2"><input type="radio" name="answer">Reggie's</div>
 		<div class="answer-3"><input type="radio" name="answer">Monk's</div>
 		<div class="answer-4"><input type="radio" name="answer">Dream Cafe</div>
+		<div class="submit">Submit</div>
 		<div class="question-1">
 			<h2><strong>Question #2</strong></h2>
 			<p>What is Kramer's real name?</p>
@@ -34,6 +35,7 @@
 		<div class="answer-2"><input type="radio" name="answer">Cosmo</div>
 		<div class="answer-3"><input type="radio" name="answer">John</div>
 		<div class="answer-4"><input type="radio" name="answer">Jerry</div>
+		<div class="submit">Submit</div>
 		<div class="question-1">
 			<h2><strong>Question #3</strong></h2>
 			<p>What is Jerry's apartment number?</p>
@@ -42,6 +44,7 @@
 		<div class="answer-2"><input type="radio" name="answer">5B</div>
 		<div class="answer-3"><input type="radio" name="answer">5C</div>
 		<div class="answer-4"><input type="radio" name="answer">5D</div>
+		<div class="submit">Submit</div>
 		<div class="question-1">
 			<h2><strong>Question #4</strong></h2>
 			<p>What occupation does George like to pretend he has?</p>
@@ -50,6 +53,7 @@
 		<div class="answer-2"><input type="radio" name="answer">Architect</div>
 		<div class="answer-3"><input type="radio" name="answer">Latex Salesman</div>
 		<div class="answer-4"><input type="radio" name="answer">Hand Model</div>
+		<div class="submit">Submit</div>
 		<div class="question-1">
 			<h2><strong>Question #5</strong></h2>
 			<p>What was Kramer's fake doctor name?</p>
@@ -58,7 +62,7 @@
 		<div class="answer-2"><input type="radio" name="answer">Dr. Vandelay</div>
 		<div class="answer-3"><input type="radio" name="answer">Dr. Whatley</div>
 		<div class="answer-4"><input type="radio" name="answer">Dr. Reston</div>
+		<div class="submit">Submit</div>
 	</section>
-	<div class="submit"></div>
 </body>
 </html>
