--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 		<div class="answer-3"><input type="radio" name="answer">Dr. Whatley</div>
 		<div class="answer-4"><input type="radio" name="answer">Dr. Reston</div>
 		<div class="submit">Submit</div>
+		<div class="game-over">Congrats! You got 6 out of 6 questions right! Play again?</div>
 	</section>
 </body>
 </html>
