score counter resets at new game

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 	</div>
 	<section class="question-answer">
 		<div class="question-title">
-			<h2><strong>Question <span class="counter">#1</span></strong></h2>
+			<h2><strong>Question #<span class="counter">1</span></strong></h2>
 			<p></p>
 		</div>
-		<div class="answer-1"></div>
-		<div class="answer-2"></div>
-		<div class="answer-3"></div>
-		<div class="answer-4"></div>
-		<div class="submit">Submit</div>
+		<form class="quiz-form">
+			<div class="answers"></div>
+			<div class="new-game">New Game!</div>
+		</form>
+		<br>
+		<br>
 	</section>
-		<!-- <div class="game-over">Congrats! You got 6 out of 6 questions right! Play again?</div> -->
 </body>
 </html>
